default/objects/Case/fields/AntiCorrosion__c.field-meta.xml
<CustomField>
    <fullName>AntiCorrosion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anti Corrosion</label>
    <type>Checkbox</type>
</CustomField>