default/objects/Case/fields/AssistanceService__c.field-meta.xml
<CustomField>
    <fullName>AssistanceService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assistance Service</label>
    <type>Checkbox</type>
</CustomField>