default/objects/Case/fields/CDOAestheticCapitalLimit__c.field-meta.xml
<CustomField>
    <fullName>CDOAestheticCapitalLimit__c</fullName>
    <label>CDO Aesthetic Capital Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>