default/objects/Case/fields/ClaimantDescription__c.field-meta.xml
<CustomField>
    <fullName>ClaimantDescription__c</fullName>
    <label>Claimant Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS</fullName>
                <label>Insured</label>
            </value>
            <value>
                <fullName>CY</fullName>
                <label>Spouse</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>Child</label>
            </value>
            <value>
                <fullName>ME</fullName>
                <label>Mediator</label>
            </value>
            <value>
                <fullName>OF</fullName>
                <label>Office</label>
            </value>
            <value>
                <fullName>FA</fullName>
                <label>Family</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>