default/objects/Case/fields/ClaimantName__c.field-meta.xml
<CustomField>
    <fullName>ClaimantName__c</fullName>
    <label>Claimant Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>