default/objects/Case/fields/ClaimClassification__c.field-meta.xml
<CustomField>
    <fullName>ClaimClassification__c</fullName>
    <label>Claim Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catastrophe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>