default/objects/Case/fields/ClaimHandlingDuration__c.field-meta.xml
<CustomField>
    <fullName>ClaimHandlingDuration__c</fullName>
    <formula>IF(
  ISBLANK(ClosedDate),
  TODAY() - DATEVALUE(CreatedDate),
  DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Handling Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>