default/objects/Case/fields/ClaimsHandlerEmail__c.field-meta.xml
<CustomField>
    <fullName>ClaimsHandlerEmail__c</fullName>
    <label>Claims Handler Email</label>
    <type>Email</type>
</CustomField>