default/objects/Case/fields/ClaimsHandlerName__c.field-meta.xml
<CustomField>
    <fullName>ClaimsHandlerName__c</fullName>
    <label>Claims Handler Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>