default/objects/Case/fields/ClaimTypeIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ClaimTypeIdentifier__c</fullName>
    <label>Claim Type Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RE</fullName>
                <label>Repairable</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Compensable</label>
            </value>
            <value>
                <fullName>MX</fullName>
                <label>Mixed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>