default/objects/Case/fields/ComunicacionAddressCity__c.field-meta.xml
<CustomField>
    <fullName>ComunicacionAddressCity__c</fullName>
    <formula>MailingInformation__City__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ComunicacionAddressCity</label>
    <type>Text</type>
</CustomField>