default/objects/Case/fields/ComunicacionAddressPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ComunicacionAddressPostalCode__c</fullName>
    <formula>MailingInformation__PostalCode__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ComunicacionAddressPostalCode</label>
    <type>Text</type>
</CustomField>