default/objects/Case/fields/ComunicacionAddressStreet__c.field-meta.xml
<CustomField>
    <fullName>ComunicacionAddressStreet__c</fullName>
    <formula>MailingInformation__Street__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ComunicacionAddressStreet</label>
    <type>Text</type>
</CustomField>