default/objects/Case/fields/ComunicacionCurDate__c.field-meta.xml
<CustomField>
    <fullName>ComunicacionCurDate__c</fullName>
    <formula>TEXT(DAY(TODAY())) &amp; &quot; de &quot; &amp;
CASE(
  MONTH(TODAY()),
  1,&quot;Enero&quot;,2,&quot;Febrero&quot;,3,&quot;Marzo&quot;,4,&quot;Abril&quot;,
  5,&quot;Mayo&quot;,6,&quot;Junio&quot;,7,&quot;Julio&quot;,8,&quot;Agosto&quot;,
  9,&quot;Septiembre&quot;,10,&quot;Octubre&quot;,11,&quot;Noviembre&quot;,12,&quot;Diciembre&quot;,
  &quot;&quot;
) &amp; &quot; de &quot; &amp;
TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ComunicacionCurDate</label>
    <type>Text</type>
</CustomField>