default/objects/Case/fields/ContactDescription__c.field-meta.xml
<CustomField>
    <fullName>ContactDescription__c</fullName>
    <label>Contact Description</label>
    <length>55555</length>
    <type>LongTextArea</type>
</CustomField>