default/objects/Case/fields/CTEAestheticCapitalLimit__c.field-meta.xml
<CustomField>
    <fullName>CTEAestheticCapitalLimit__c</fullName>
    <label>CTE Aesthetic Capital Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>