default/objects/Case/fields/CurrentProvisionAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentProvisionAmount__c</fullName>
    <label>Current Provision Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>