default/objects/Case/fields/DamagesIncurred__c.field-meta.xml
<CustomField>
    <fullName>DamagesIncurred__c</fullName>
    <label>Damages Incurred</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>ACCIDENTE</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>ACCIDENTE  IN ITINERE</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>ACCIDENTE DE CIRCULACION</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>ACCIDENTE DENTRO DEL ESTADIO</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>ACCIDENTE DEPORTIVO</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>ACCIDENTE DOMESTICO</label>
            </value>
            <value>
                <fullName>0007</fullName>
                <label>ACCIDENTE EN GUARDERIA</label>
            </value>
            <value>
                <fullName>0008</fullName>
                <label>ACCIDENTE EN TRANSPORTE</label>
            </value>
            <value>
                <fullName>0009</fullName>
                <label>ACCIDENTE EXTRAPROFESIONAL</label>
            </value>
            <value>
                <fullName>0010</fullName>
                <label>ACCIDENTE FUERA DEL ESTADIO</label>
            </value>
            <value>
                <fullName>0011</fullName>
                <label>ACCIDENTE LABORAL</label>
            </value>
            <value>
                <fullName>0012</fullName>
                <label>ACCIDENTE MOTICICLETAS</label>
            </value>
            <value>
                <fullName>0013</fullName>
                <label>ACCIDENTE NO PROFESIONAL</label>
            </value>
            <value>
                <fullName>0014</fullName>
                <label>ACCIDENTE PROFESIONAL</label>
            </value>
            <value>
                <fullName>0015</fullName>
                <label>ACCTE CIRCUL DURANTE DESPLAZAMIENTO EN VEHICULOS</label>
            </value>
            <value>
                <fullName>0016</fullName>
                <label>ACTOS VANDALICOS POR EL INQULINO</label>
            </value>
            <value>
                <fullName>0017</fullName>
                <label>ACUARIOS</label>
            </value>
            <value>
                <fullName>0018</fullName>
                <label>ADQUISICION  DE ENSERES</label>
            </value>
            <value>
                <fullName>0019</fullName>
                <label>AEROTERMIA</label>
            </value>
            <value>
                <fullName>0020</fullName>
                <label>AIRE ACONDICIONADO</label>
            </value>
            <value>
                <fullName>0021</fullName>
                <label>AISLAMIENTO DE VENTANAS Y SIMILARES</label>
            </value>
            <value>
                <fullName>0022</fullName>
                <label>ALARMA</label>
            </value>
            <value>
                <fullName>0023</fullName>
                <label>ALIMENTOS REFRIGERADOS</label>
            </value>
            <value>
                <fullName>0024</fullName>
                <label>ALQUILER DE VIVIENDAS</label>
            </value>
            <value>
                <fullName>0025</fullName>
                <label>ANCLAJE DE SANITARIOS</label>
            </value>
            <value>
                <fullName>0026</fullName>
                <label>ANIMALES DOMESTICOS</label>
            </value>
            <value>
                <fullName>0027</fullName>
                <label>ANTENA COLECTIVA</label>
            </value>
            <value>
                <fullName>0028</fullName>
                <label>ANTENA PARTICULAR</label>
            </value>
            <value>
                <fullName>0029</fullName>
                <label>ARBOLEDA Y JARDINES</label>
            </value>
            <value>
                <fullName>0030</fullName>
                <label>ASCENSOR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>