default/objects/Case/fields/DeductibleUsed__c.field-meta.xml
<CustomField>
    <fullName>DeductibleUsed__c</fullName>
    <label>Deductible Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>