default/objects/Case/fields/ExponentialQuadrant__c.field-meta.xml
<CustomField>
    <fullName>ExponentialQuadrant__c</fullName>
    <label>Exponential Quadrant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
                <label>Catastrophe</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>Problem</label>
            </value>
            <value>
                <fullName>MO</fullName>
                <label>Injury</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Inconvenience</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>