default/objects/Case/fields/Favorites__c.field-meta.xml
<CustomField>
    <fullName>Favorites__c</fullName>
    <label>Favorites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>