default/objects/Case/fields/GCClaimNumber__c.field-meta.xml
<CustomField>
    <fullName>GCClaimNumber__c</fullName>
    <label>GC Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>