default/objects/Case/fields/GrandAccount__c.field-meta.xml
<CustomField>
    <fullName>GrandAccount__c</fullName>
    <label>Grand Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLA</fullName>
            </value>
            <value>
                <fullName>PLYO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>