default/objects/Case/fields/IncidentDate__c.field-meta.xml
<CustomField>
    <fullName>IncidentDate__c</fullName>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>