default/objects/Case/fields/InsurerClaimReference__c.field-meta.xml
<CustomField>
    <fullName>InsurerClaimReference__c</fullName>
    <externalId>true</externalId>
    <label>Insurer Claim Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>