default/objects/Case/fields/IsVIP__c.field-meta.xml
<CustomField>
    <fullName>IsVIP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean indicator for a VIP customer claim.</description>
    <label>VIP Customer</label>
    <type>Checkbox</type>
</CustomField>