default/objects/Case/fields/LastIntegrationDescription__c.field-meta.xml
<CustomField>
    <fullName>LastIntegrationDescription__c</fullName>
    <label>Last Integration Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>