default/objects/Case/fields/LastModifiedDateCustom__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDateCustom__c</fullName>
    <description>For Task Logic</description>
    <label>Last Modified Date Custom</label>
    <type>DateTime</type>
</CustomField>