default/objects/Case/fields/LastReopeningDate__c.field-meta.xml
<CustomField>
    <fullName>LastReopeningDate__c</fullName>
    <label>Last Reopening Date</label>
    <type>DateTime</type>
</CustomField>