default/objects/Case/fields/LossAssessment__c.field-meta.xml
<CustomField>
    <fullName>LossAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loss Assessment</label>
    <type>Checkbox</type>
</CustomField>