default/objects/Case/fields/LowExpiration__c.field-meta.xml
<CustomField>
    <fullName>LowExpiration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Expiration</label>
    <type>Checkbox</type>
</CustomField>