default/objects/Case/fields/MailingInformation__c.field-meta.xml
<CustomField>
    <fullName>MailingInformation__c</fullName>
    <label>Mailing Information</label>
    <type>Address</type>
</CustomField>