default/objects/Case/fields/Marcadores__c.field-meta.xml
<CustomField>
    <fullName>Marcadores__c</fullName>
    <label>Marcadores</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M0001</fullName>
                <label>TCA 13-15/01/2010</label>
            </value>
            <value>
                <fullName>M0002</fullName>
                <label>TCA 16-18/02/2010</label>
            </value>
            <value>
                <fullName>M0003</fullName>
                <label>TCA 26 28/02/2010</label>
            </value>
            <value>
                <fullName>M0004</fullName>
                <label>SINI. REHUSADO</label>
            </value>
            <value>
                <fullName>M0005</fullName>
                <label>CORROSION</label>
            </value>
            <value>
                <fullName>M0006</fullName>
                <label>TRAMIT. FIJO</label>
            </value>
            <value>
                <fullName>M0007</fullName>
                <label>CONVENIO</label>
            </value>
            <value>
                <fullName>M0008</fullName>
                <label>REASEGURO</label>
            </value>
            <value>
                <fullName>M0009</fullName>
                <label>INFRASEGURO</label>
            </value>
            <value>
                <fullName>M0010</fullName>
                <label>TCA CONSORCIO</label>
            </value>
            <value>
                <fullName>M0011</fullName>
                <label>KLAUS 2009</label>
            </value>
            <value>
                <fullName>M0012</fullName>
                <label>TCA GONG</label>
            </value>
            <value>
                <fullName>M0013</fullName>
                <label>SINIESTRO SCC</label>
            </value>
            <value>
                <fullName>M0014</fullName>
                <label>RECLA. ORIGEN</label>
            </value>
            <value>
                <fullName>M0015</fullName>
                <label>TCA DIRK</label>
            </value>
            <value>
                <fullName>M0016</fullName>
                <label>CONTROL CUMULO</label>
            </value>
            <value>
                <fullName>M0017</fullName>
                <label>TCA KURT</label>
            </value>
            <value>
                <fullName>M0018</fullName>
                <label>MARC. USE</label>
            </value>
            <value>
                <fullName>M0019</fullName>
                <label>TCA-ANA</label>
            </value>
            <value>
                <fullName>M0020</fullName>
                <label>ARAG</label>
            </value>
            <value>
                <fullName>M0021</fullName>
                <label>ALTA AUS AGE</label>
            </value>
            <value>
                <fullName>M0022</fullName>
                <label>ALTA AUS COR</label>
            </value>
            <value>
                <fullName>M0023</fullName>
                <label>ALTA AUS COC</label>
            </value>
            <value>
                <fullName>M0024</fullName>
                <label>ALTA AUS EMP</label>
            </value>
            <value>
                <fullName>M0025</fullName>
                <label>ALTA AUS BEC</label>
            </value>
            <value>
                <fullName>M0026</fullName>
                <label>TCA GLORIA</label>
            </value>
            <value>
                <fullName>M0027</fullName>
                <label>SOLICITADO VT EN ALTA</label>
            </value>
            <value>
                <fullName>M0028</fullName>
                <label>TCA1:11/12/2019</label>
            </value>
            <value>
                <fullName>M0029</fullName>
                <label>TCA2:16/12/2019 Daniel</label>
            </value>
            <value>
                <fullName>M0030</fullName>
                <label>TCA3:18/1/2020 Gloria</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>