default/objects/Case/fields/OperationalClosedDate__c.field-meta.xml
<CustomField>
    <fullName>OperationalClosedDate__c</fullName>
    <label>Operational Closed Date</label>
    <type>DateTime</type>
</CustomField>