default/objects/Case/fields/ParticipationDate__c.field-meta.xml
<CustomField>
    <fullName>ParticipationDate__c</fullName>
    <label>Participation Date</label>
    <type>Date</type>
</CustomField>