default/objects/Case/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <label>Policy Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>