default/objects/Case/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <description>Preferred language for contacting the insurer.</description>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAS</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>EUS</fullName>
                <label>Basque</label>
            </value>
            <value>
                <fullName>CAT</fullName>
                <label>Catalan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>