default/objects/Case/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Province of the risk address.</description>
    <label>Risk Province</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>51</fullName>
                <label>Ceuta</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Melilla</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>