default/objects/Case/fields/QuestionnaireComments__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireComments__c</fullName>
    <label>Questionnaire / Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>