default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reasons</valueSetName>
    </valueSet>
</CustomField>