default/objects/Case/fields/RelationshiptotheInsured__c.field-meta.xml
<CustomField>
    <fullName>RelationshiptotheInsured__c</fullName>
    <label>Relationship to the Insured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CY</fullName>
                <label>Cónyuge</label>
            </value>
            <value>
                <fullName>HI</fullName>
                <label>Hijo</label>
            </value>
            <value>
                <fullName>FA</fullName>
                <label>Familiar</label>
            </value>
            <value>
                <fullName>VE</fullName>
                <label>Vecino</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>