default/objects/Case/fields/ReopenedDaysCounter__c.field-meta.xml
<CustomField>
    <fullName>ReopenedDaysCounter__c</fullName>
    <label>Reopened Days Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>