default/objects/Case/fields/ReopeningCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ReopeningCloseDate__c</fullName>
    <label>Reopening Close Date</label>
    <type>DateTime</type>
</CustomField>