default/objects/Case/fields/ReopeningCounter__c.field-meta.xml
<CustomField>
    <fullName>ReopeningCounter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reopening Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>