default/objects/Case/fields/ReopeningDate__c.field-meta.xml
<CustomField>
    <fullName>ReopeningDate__c</fullName>
    <label>Reopening Date</label>
    <type>DateTime</type>
</CustomField>