default/objects/Case/fields/ReopeningDescription__c.field-meta.xml
<CustomField>
    <fullName>ReopeningDescription__c</fullName>
    <label>Reopening Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>