default/objects/Case/fields/ReopeningReason__c.field-meta.xml
<CustomField>
    <fullName>ReopeningReason__c</fullName>
    <label>Reopening Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error cierre tramitación</fullName>
            </value>
            <value>
                <fullName>Error cierre reparador</fullName>
            </value>
            <value>
                <fullName>Modificación facturación</fullName>
            </value>
            <value>
                <fullName>Solicitud compañía</fullName>
            </value>
            <value>
                <fullName>Solicitud cliente</fullName>
            </value>
            <value>
                <fullName>Solicitud perito</fullName>
            </value>
            <value>
                <fullName>Error sistema</fullName>
            </value>
            <value>
                <fullName>Nuevos daños detectados</fullName>
            </value>
            <value>
                <fullName>Reclamación</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>