default/objects/Case/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repair</label>
    <type>Checkbox</type>
</CustomField>