default/objects/Case/fields/RiskAddress__c.field-meta.xml
<CustomField>
    <fullName>RiskAddress__c</fullName>
    <description>Full address corresponding to the claim.</description>
    <label>Risk Full Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>