default/objects/Case/fields/Selected_Order_Ids__c.field-meta.xml
<CustomField>
    <fullName>Selected_Order_Ids__c</fullName>
    <label>Selected Order Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>