default/objects/Case/fields/Selected_Service_Ids__c.field-meta.xml
<CustomField>
    <fullName>Selected_Service_Ids__c</fullName>
    <label>Selected Service Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>