default/objects/Case/fields/ServiceNearPolicy__c.field-meta.xml
<CustomField>
    <fullName>ServiceNearPolicy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Near Policy</label>
    <type>Checkbox</type>
</CustomField>