default/objects/Case/fields/SituationType__c.field-meta.xml
<CustomField>
    <fullName>SituationType__c</fullName>
    <label>Situation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
                <label>Proposal/Opening</label>
            </value>
            <value>
                <fullName>RZ</fullName>
                <label>Rejection</label>
            </value>
            <value>
                <fullName>EC</fullName>
                <label>In progress</label>
            </value>
            <value>
                <fullName>CE</fullName>
                <label>Operational closure</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>AN</fullName>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>