default/objects/Case/fields/SourceLocated__c.field-meta.xml
<CustomField>
    <fullName>SourceLocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Located</label>
    <type>Checkbox</type>
</CustomField>