default/objects/Case/fields/SourceRepaired__c.field-meta.xml
<CustomField>
    <fullName>SourceRepaired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source Repaired</label>
    <type>Checkbox</type>
</CustomField>