default/objects/Case/fields/SubReason__c.field-meta.xml
<CustomField>
    <fullName>SubReason__c</fullName>
    <label>Sub-Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubReasons</valueSetName>
    </valueSet>
</CustomField>