default/objects/Case/fields/TaxNumber__c.field-meta.xml
<CustomField>
    <fullName>TaxNumber__c</fullName>
    <formula>Contact.IDNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Number</label>
    <type>Text</type>
</CustomField>