default/objects/Case/fields/TemplateCarta__c.field-meta.xml
<CustomField>
    <fullName>TemplateCarta__c</fullName>
    <label>Template Carta</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>