default/objects/Case/fields/ThirdPartiesAffected__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartiesAffected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Parties Affected</label>
    <type>Checkbox</type>
</CustomField>