default/objects/Case/fields/VitalOrganAffected__c.field-meta.xml
<CustomField>
    <fullName>VitalOrganAffected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vital Organ Affected</label>
    <type>Checkbox</type>
</CustomField>