default/objects/Case/fields/WantsEmailNotifications__c.field-meta.xml
<CustomField>
    <fullName>WantsEmailNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants Email Notifications</label>
    <type>Checkbox</type>
</CustomField>