default/objects/Case/fields/WantsSMSNotifications__c.field-meta.xml
<CustomField>
    <fullName>WantsSMSNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants SMS Notifications</label>
    <type>Checkbox</type>
</CustomField>