default/objects/Case/fields/WantsWhatsAppNotifications__c.field-meta.xml
<CustomField>
    <fullName>WantsWhatsAppNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WantsWhatsAppNotifications_</label>
    <type>Checkbox</type>
</CustomField>