default/objects/Case/fields/WorkAgentStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkAgentStatus__c</fullName>
    <label>Work Agent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>