default/objects/Case/listViews/ClaimSupport_Case.listView-meta.xml
<ListView>
    <fullName>ClaimSupport_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Sinistros Reparables</label>
    <queue>SinistrosReparables</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>